[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "robocam"
version = "0.1.0"
description = "Minimal camera drivers, async video encoding, and frame buffering for robotics."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "loguru",
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]
zed = ["pyzed"]
opencv = ["opencv-contrib-python"]
image = ["opencv-contrib-python", "Pillow"]
all = ["pyrealsense2", "pyzed", "opencv-contrib-python", "Pillow"]

[tool.flit.module]
name = "robocam"

# Pre-bundled pyzed wheel for CPython 3.11 + Linux x86_64.
# Other platforms: download from https://www.stereolabs.com/developers/release
[tool.uv.sources]
pyzed = { path = "vendor/pyzed-5.2-cp311-cp311-linux_x86_64.whl" }

[tool.ruff]
line-length = 119
