[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "robocam"
version = "0.1.0"
description = "Minimal camera drivers, async video encoding, and frame buffering for robotics."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "loguru",
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]
zed = ["pyzed"]
opencv = ["opencv-contrib-python"]
image = ["opencv-contrib-python", "Pillow"]
all = ["pyrealsense2", "pyzed", "opencv-contrib-python", "Pillow"]

[tool.flit.module]
name = "robocam"

# pyzed is not on PyPI. When using robocam[zed], provide the pyzed wheel
# via [tool.uv.sources] in your project's pyproject.toml. See README.md.
# For convenience, a vendored wheel is included in vendor/ for local installs.

[tool.ruff]
line-length = 119
