[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "robocam"
version = "0.1.0"
description = "Minimal camera drivers, async video encoding, and frame buffering for robotics."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "loguru",
    "tyro",
    "opencv-contrib-python",
    "Pillow",
    "pyrealsense2",
    "pyzed",
    "viser",
]

[tool.flit.module]
name = "robocam"

# pyzed is not on PyPI — there's a fake pyzed on PyPI that is unrelated.
# This source points to the real Stereolabs wheel on their CDN.
# When consuming robocam as a git dependency, this source is ignored by uv;
# the downstream project must configure pyzed in its own [tool.uv.sources].
[tool.uv.sources]
pyzed = { url = "https://download.stereolabs.com/zedsdk/5.2/whl/linux_x86_64/pyzed-5.2-cp311-cp311-linux_x86_64.whl" }

[tool.ruff]
line-length = 119
